# kursovaya

./: main.py  migrations.json  pyproject.toml
DataBase/: config.py  migrate_consts.py
DataBase/Models/: detModel.py  materialsModel.py  seModel.py  typesModel.py
DataBase/Repositories/: detRepository.py  materialsRepository.py  seRepository.py  typesRepository.py
migrations/: 0001_migration_202412111921.py
misc/: consts.py
