[tool.poetry]
name = "kursovaya"
version = "0.1.0"
description = ""
authors = ["ekurlenko <ekurlenko17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.8"
peewee-migrations = "^0.3.32"
pymysql = "^1.1.1"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
